邀请函页面编写

--- a/views/invitation.html
+++ b/views/invitation.html
@@ -18,7 +18,7 @@
                 <p style="color:#8BD66A">来吧，一起组队</p>
                 <p style="color:#fff">相互成就</p>
                 <p style="color:#D6A26A">等你</p>
-                <p style="color:#fff">哦</p>
+                <p style="color:#fff">来</p>
             </div>
         </div>
     </div>
@@ -26,38 +26,40 @@
     <div class="slide">
         <div class="content animated" data-animate="zoomInUp">
             <i></i><i></i><i></i><i></i>
-            第一页
-
-            智能家居创业项目
-
-            招募小伙伴
-
-            1、技术开发3人
-            2、项目策划1人
-            3、运营1人
+           <h3>我想说的</h3>
+            <div class="sayContent" style="text-align:left;">
+                <p>Hi~大家好，我是Maker。首先，感谢你能打开这封邀请函。没错，一直想要创业，但迟迟未能行动，这次真的要大干一场。那创业项目是什么呢，哈哈，当然是智能家居啦~</p>
+                <p>what? 智能家居什么鬼？？<a style="display:inline;color:#9ee172" href="/invitation/smart">→戳我了解←</a></p>
+                <p>现在市场上的“智能”产品，都是使用手机控制。在我的脑海里，智能产品是能根据外在环境<strong>自主控制</strong>来达到预期的效果。所以我想做的就是利用<strong>人工智能</strong>结合<strong>物联网</strong>打造一个产品智能交互平台,具体实现方案尚未拟定，特此发出邀请，希望有志之士能共同商酌。</p>
+            </div>
         </div>
     </div>
     <div class="slide">
         <div class="content animated" data-animate="zoomInLeft">
             <i></i><i></i><i></i><i></i>
-            第二页
-
-            智能家居创业项目
-
-            招募小伙伴
-
-            1、技术开发3人
-            2、项目策划1人
-            3、运营1人
+            <h3>招募小伙伴</h3>
+            <div style="text-align:left;">
+                <p style="font-size:16px;">具备以下任意技能的小伙伴快到碗里来~</p>
+                <ol style="margin:10px;font-size:14px;">
+                    <li>1、技术开发（软、硬件）</li>
+                    <li>2、项目策划</li>
+                    <li>3、产品运营</li>
+                </ol>
+                <p style="font-size:14px;">希望你是追求高品质生活的人，渴望科技给自己带来极致的生活体验</p>
+            </div>
         </div>
     </div>
     <div class="slide">
         <div class="content animated" data-animate="zoomInRight">
             <i></i><i></i><i></i><i></i>
             <h3>报名方式</h3>
-            <p>长按下方二维码加入群聊</p>
-            <p>↓↓↓</p>
-            <img width="50%" src="/images/MK_INV_QR.png"/>
+            <p><strong style="color:#ec96f9;">报名的小伙伴注意哟~</strong></p>
+            <p style="color:#f0f571;">最好在北京有工作，Maker会组织大家线下交流的呢~</p>
+            <div class="qrCode">
+                <p>长按下方二维码加入群聊</p>
+                <p>↓↓↓</p>
+                <img width="60%" src="/uploads/MK_INV_QR.png"/>
+            </div>
         </div>
     </div>
 </div>
