--- a/public/css/invitation.css
+++ b/public/css/invitation.css
@@ -21,4 +21,9 @@ body:before {
 @keyframes myfirst3 {0%{width:0;}100%{width:100%;}}
 @keyframes myfirst4 {0%{height:0;}100%{height:100%;}}
 
-.content h3{height:40px;line-height:40px;font-size:20px;margin-bottom:100px;}
+.content h3{height:40px;line-height:40px;font-size:20px;margin-bottom:40px;}
+
+.sayContent p{text-indent:2em;margin-bottom:10px;font-size:14px!important;}
+.sayContent p strong{color:#facc96;}
+
+.qrCode{position:absolute;bottom:40px;}
