--- a/views/invitation.html
+++ b/views/invitation.html
@@ -30,7 +30,14 @@
             <div class="sayContent" style="text-align:left;">
                 <p>Hi~大家好，我是Maker。首先，感谢你能打开这封邀请函。没错，一直想要创业，但迟迟未能行动，这次真的要大干一场。那创业项目是什么呢，哈哈，当然是智能家居啦~</p>
                 <p>what? 智能家居什么鬼？？<a style="display:inline;color:#9ee172" href="/invitation/smart">→戳我了解←</a></p>
-                <p>现在市场上的“智能”产品，都是使用手机控制。在我的脑海里，智能产品是能根据外在环境<strong>自主控制</strong>来达到预期的效果。所以我想做的就是利用<strong>人工智能</strong>结合<strong>物联网</strong>打造一个产品智能交互平台,具体实现方案尚未拟定，特此发出邀请，希望有志之士能共同商酌。</p>
+                <p>现在市场上的“智能”产品，都是使用手机控制。在我的脑海里，智能产品是能根据外在环境<strong>自主控制</strong>来达到预期的效果。所以我想做的是利用<strong>人工智能</strong>结合<strong>物联网</strong>打造一个产品智能交互平台,具体实施方案尚未拟订，特此发出邀请，希望有志之士共同商酌。</p>
+            </div>
+            <div class="declare">
+                <p>此次邀请是招募小伙伴一起商酌</p>
+                <p>确定发展方向</p>
+                <p>并拟定可行性方案</p>
+                <p>如果进展顺利</p>
+                <p>2019年中旬便可成立工作室</p>
             </div>
         </div>
     </div>
@@ -45,7 +52,7 @@
                     <li>2、项目策划</li>
                     <li>3、产品运营</li>
                 </ol>
-                <p style="font-size:14px;">希望你是追求高品质生活的人，渴望科技给自己带来极致的生活体验</p>
+                <p style="font-size:14px;">希望你是追求高品质生活的人，渴望科技带来极致的生活体验</p>
             </div>
         </div>
     </div>
@@ -54,7 +61,7 @@
             <i></i><i></i><i></i><i></i>
             <h3>报名方式</h3>
             <p><strong style="color:#ec96f9;">报名的小伙伴注意哟~</strong></p>
-            <p style="color:#f0f571;">最好在北京有工作，Maker会组织大家线下交流的呢~</p>
+            <p style="color:#f0f571;">最好在北京有工作，Maker会定期组织大家线下交流的呢~</p>
             <div class="qrCode">
                 <p>长按下方二维码加入群聊</p>
                 <p>↓↓↓</p>
