邀请函内容补充

--- a/views/invitation.html
+++ b/views/invitation.html
@@ -9,9 +9,9 @@
 {% block body %}
 <div id="fsvs-body">
     <div class="slide">
-        <div class="animated zoomInDown" data-animate="zoomInDown">
-            <img src="/images/inv-bg.png" width="100%"/>
-            <div class="describe" id="write">
+        <div class="animated" data-animate="zoomInDown">
+            <img class="dis imgInv" src="/images/inv-bg.png" width="100%"/>
+            <div class="dis describe" id="write">
                 <p style="color:#fff">在这有着重大意义的一年</p>
                 <p style="color:#D66AB4">让我们一起放手一搏</p>
                 <p style="color:#fff">创业、创业、创业</p>
@@ -28,8 +28,8 @@
             <i></i><i></i><i></i><i></i>
            <h3>我想说的</h3>
             <div class="sayContent" style="text-align:left;">
-                <p>Hi~大家好，我是Maker。首先，感谢你能打开这封邀请函。没错，一直想要创业，但迟迟未能行动，这次真的要大干一场。那创业项目是什么呢，哈哈，当然是智能家居啦~</p>
-                <p>what? 智能家居什么鬼？？<a style="display:inline;color:#9ee172" href="/invitation/smart">→戳我了解←</a></p>
+                <p>Hi~大家好，我是Maker。感谢你能打开这封邀请函。创业？是的，一直想要创业，但迟迟未能行动，这次真的要大干一场。那创业项目是什么呢，哈哈，当然是智能家居啦~</p>
+                <p>what? 智能家居什么鬼？？我做了个关于智能家居的短视频 ☞<a style="display:inline;color:#9ee172" href="/invitation/smart"> 戳我观看 </a>☜</p>
                 <p>现在市场上的“智能”产品，都是使用手机控制。在我的脑海里，智能产品是能根据外在环境<strong>自主控制</strong>来达到预期的效果。所以我想做的是利用<strong>人工智能</strong>结合<strong>物联网</strong>打造一个产品智能交互平台,具体实施方案尚未拟订，特此发出邀请，希望有志之士共同商酌。</p>
             </div>
             <div class="declare">
@@ -46,13 +46,25 @@
             <i></i><i></i><i></i><i></i>
             <h3>招募小伙伴</h3>
             <div style="text-align:left;">
-                <p style="font-size:16px;">具备以下任意技能的小伙伴快到碗里来~</p>
-                <ol style="margin:10px;font-size:14px;">
-                    <li>1、技术开发（软、硬件）</li>
-                    <li>2、项目策划</li>
-                    <li>3、产品运营</li>
+                <p style="font-size:16px;">具备以下<span style="color:#AFF5C4;">任意技能</span>的小伙伴快到碗里来~</p>
+                <ol class="olList" style="margin:10px;font-size:14px;">
+                    <li>
+                        <strong style="color:#AFF5F2;">1、技术开发（软、硬件）</strong>
+                        <p style="color:#AFF5F2;">负责产品研发，有智能产品硬件开发，网站平台开发等，专注于人工智能、互联网和物联网等技术领域</p>
+                    </li>
+                    <li>
+                        <strong style="color:#FAB4E3;">2、项目策划</strong>
+                        <p>负责项目的发展战略</p>
+                    </li>
+                    <li>
+                        <strong style="color:#FACEB4;">3、产品运营</strong>
+                        <p>负责市场考察，推广产品</p>
+                    </li>
                 </ol>
-                <p style="font-size:14px;">希望你是追求高品质生活的人，渴望科技带来极致的生活体验</p>
+                <div class="declare">
+                    <p>希望你是追求高品质生活的人</p>
+                    <p>渴望科技带来的极致生活</p>
+                </div>
             </div>
         </div>
     </div>
@@ -60,7 +72,7 @@
         <div class="content animated" data-animate="zoomInRight">
             <i></i><i></i><i></i><i></i>
             <h3>报名方式</h3>
-            <p><strong style="color:#ec96f9;">报名的小伙伴注意哟~</strong></p>
+            <p><strong style="color:#F0C6F5;">报名的小伙伴注意哟~</strong></p>
             <p style="color:#f0f571;">最好在北京有工作，Maker会定期组织大家线下交流的呢~</p>
             <div class="qrCode">
                 <p>长按下方二维码加入群聊</p>
