--- a/public/css/invitation.css
+++ b/public/css/invitation.css
@@ -1,4 +1,5 @@
 body:before {content: ' ';position: fixed;z-index: -1;top: 0;right: 0;bottom: 0;left: 0;background:#000 url(../images/bg.jpg) no-repeat center;background-size: 100%;}
+.dis{display:none;}
 .describe{text-align:center;font-size:14px;}
 .content{width:80%;height:85%;padding:10px;margin:8% auto;background-color:rgba(255, 255, 255, 0.4);background-image: url(../images/flower.png),url(../images/flower-bottom.png);background-repeat:no-repeat;background-position: top right,bottom right;background-size:100%;text-align:center;position:relative}
 .content i{position:absolute;background:#fff;opacity: .8}
@@ -11,7 +12,7 @@ body:before {content: ' ';position: fixed;z-index: -1;top: 0;right: 0;bottom: 0;
 @keyframes myfirst3 {0%{width:0;}100%{width:100%;}}
 @keyframes myfirst4 {0%{height:0;}100%{height:100%;}}
 
-.content h3{height:40px;line-height:40px;font-size:20px;margin-bottom:40px;}
+.content h3{height:40px;line-height:40px;font-size:20px;margin-bottom:20px;}
 
 .sayContent p{text-indent:2em;margin-bottom:10px;font-size:14px!important;}
 .sayContent p strong{color:#facc96;}
@@ -19,3 +20,6 @@ body:before {content: ' ';position: fixed;z-index: -1;top: 0;right: 0;bottom: 0;
 .qrCode{position:absolute;bottom:40px;}
 .declare{width:100%;position:absolute;bottom:40px;}
 .declare p{text-align:center;font-size:16px!important;}
+
+.olList li{margin-bottom:10px;}
+.olList li p{font-size:12px!important;width:80%;margin:0 auto;}
