--- a/views/invitation.html
+++ b/views/invitation.html
@@ -54,11 +54,11 @@
                     </li>
                     <li>
                         <strong style="color:#FAB4E3;">2、项目策划</strong>
-                        <p>负责项目的发展战略</p>
+                        <p style="color:#FAB4E3;">负责项目的发展战略</p>
                     </li>
                     <li>
                         <strong style="color:#FACEB4;">3、产品运营</strong>
-                        <p>负责市场考察，推广产品</p>
+                        <p style="color:#FACEB4;">负责市场考察，推广产品</p>
                     </li>
                 </ol>
                 <div class="declare">
