--- a/views/smartHome.html
+++ b/views/smartHome.html
@@ -1,11 +1,22 @@
 {% extends 'base.html' %}
-{% block title %}智能家居介绍{% endblock %}
+{% block title %}未来的生活方式{% endblock %}
 {% block css %}
 <link type="text/css" rel="stylesheet" href="/css/smartHome.css"/>
 {% endblock %}
 
 {% block body %}
-智能家居介绍
-<br/>
-<a href="/invitation#slide-2">返回邀请函</a>
+<div class="smart">
+    <iframe width="100%" src='http://player.youku.com/embed/XMzM3NDQyNDQ4MA==' frameborder=0 'allowfullscreen'></iframe>
+
+    <p>这是我从网上找来的一段视频</p>
+    <p>介绍了未来人们的生活方式</p>
+    <p>这也正是我一直追求的</p>
+    <p>如果你看完了也渴望这样的生活</p>
+    <p>那不妨参与我的创业计划吧</p>
+    <p>我们一起努力，向着追求奔进</p>
+    <p>点击下方的按钮返回邀请函报名吧</p>
+    <p>↓↓↓</p>
+    <br/>
+    <a href="/invitation#slide-2">返回邀请函</a>
+</div>
 {% endblock %}
