邀请函修改文字描述

--- a/views/invitation.html
+++ b/views/invitation.html
@@ -1,16 +1,11 @@
-{% extends 'base.html' %}
-{% block title %}{{ title }}{% endblock %}
-{% block css %}
-<link type="text/css" rel="stylesheet" href="/css/common/animate.min.css"/>
-<link type="text/css" rel="stylesheet" href="/css/FSVS.css"/>
-<link type="text/css" rel="stylesheet" href="/css/invitation.css"/>
-{% endblock %}
-
-{% block body %}
+{% extends 'base.html' %} {% block title %}{{ title }}{% endblock %} {% block css %}
+<link type="text/css" rel="stylesheet" href="/css/common/animate.min.css" />
+<link type="text/css" rel="stylesheet" href="/css/FSVS.css" />
+<link type="text/css" rel="stylesheet" href="/css/invitation.css" /> {% endblock %} {% block body %}
 <div id="fsvs-body">
     <div class="slide">
         <div class="animated" data-animate="zoomInDown">
-            <img class="dis imgInv" src="/images/inv-bg.png" width="100%"/>
+            <img class="dis imgInv" src="/images/inv-bg.png" width="100%" />
             <div class="dis describe" id="write">
                 <p style="color:#fff">在这有着重大意义的一年</p>
                 <p style="color:#D66AB4">让我们一起放手一搏</p>
@@ -26,7 +21,7 @@
     <div class="slide">
         <div class="content animated" data-animate="zoomInUp">
             <i></i><i></i><i></i><i></i>
-           <h3>我想说的</h3>
+            <h3>我要说的</h3>
             <div class="sayContent" style="text-align:left;">
                 <p>Hi~大家好，我是Maker。感谢你能打开这封邀请函。创业？是的，一直想要创业，但迟迟未能行动，这次真的要大干一场。那创业项目是什么呢，哈哈，当然是智能家居啦~</p>
                 <p>what? 智能家居什么鬼？？我做了个关于智能家居的短视频 ☞<a style="display:inline;color:#9ee172" href="/invitation/smart"> 戳我观看 </a>☜</p>
@@ -77,7 +72,7 @@
             <div class="qrCode">
                 <p>长按下方二维码加入群聊</p>
                 <p>↓↓↓</p>
-                <img width="50%" src="/uploads/MK_INV_QR.png"/>
+                <img width="50%" src="/uploads/MK_INV_QR.png" />
             </div>
         </div>
     </div>
