修改文字描述

--- a/views/invitation.html
+++ b/views/invitation.html
@@ -68,7 +68,7 @@
             <i></i><i></i><i></i><i></i>
             <h3>报名方式</h3>
             <p><strong style="color:#F0C6F5;">报名的小伙伴注意哟~</strong></p>
-            <p style="color:#f0f571;">最好在北京有工作，Maker会定期组织大家线下交流的呢~</p>
+            <p style="color:#f0f571;">最好在北京且有工作，Maker会定期组织大家线下交流的呢~</p>
             <div class="qrCode">
                 <p>长按下方二维码加入群聊</p>
                 <p>↓↓↓</p>
