邀请函页面内容编辑

--- a/views/invitation.html
+++ b/views/invitation.html
@@ -49,11 +49,11 @@
                     </li>
                     <li>
                         <strong style="color:#FAB4E3;">2、项目策划</strong>
-                        <p style="color:#FAB4E3;">负责项目的发展战略</p>
+                        <p style="color:#FAB4E3;">负责项目的发展战略,主要考察和分析智能家居市场的走向，以及未来的发展趋势，为团队的发展制定可行性的策划方案</p>
                     </li>
                     <li>
                         <strong style="color:#FACEB4;">3、产品运营</strong>
-                        <p style="color:#FACEB4;">负责市场考察，推广产品</p>
+                        <p style="color:#FACEB4;">负责智能家居市场用户调研和产品推广，平台的维护和策划运营活动</p>
                     </li>
                 </ol>
                 <div class="declare">
