音乐播放页面

--- a/views/music.html
+++ b/views/music.html
@@ -5,11 +5,23 @@
 {% endblock %}
 {% block body %}
 <div class="music_box">
-    <h2>{{ data.songinfo.title }}</h2>
+    <h2 class="title">{{ data.songinfo.title }}</h2>
     <p>- {{ data.songinfo.author }} -</p>
     <!--<audio src="/play/music/{{ data.songinfo.song_id }}?url={{ data.bitrate.show_link }}" controls="controls">
         您的浏览器不支持 audio 标签。
     </audio>-->
+    <div class="disc">
+        <div class="pic_radio">
+            <img src="{{ data.songinfo.pic_big }}"/>
+        </div>
+    </div>
+    <div class="operator-btn">
+        <ol>
+            <li><span class="last"></span></li>
+            <li><span class="start play"></span></li>
+            <li><span class="next"></span></li>
+        </ol>
+    </div>
 </div>
 
 <script src="/js/music.js"></script>
