--- a/public/css/music.css
+++ b/public/css/music.css
@@ -1,2 +1,22 @@
-body{background:#000;}
-.music_box{color:#fff;}
+body{background: linear-gradient(#051232, #70525C);}
+.music_box{color:#fff;text-align:center;padding-top:20px;}
+.music_box .title{font-size:16px;font-weight:300;}
+.disc{width:200px;height:200px;margin:20px auto;background:url("/images/cp.png") no-repeat center;background-size:200px;position:relative;}
+.disc:before{content:"";width:20px;height:20px;border-radius:12px;border:2px solid #A8A8A3;background:#DDD4CC;position:absolute;left:90px;top:90px;z-index:1;}
+.pic_radio{width:120px;height:120px;position:relative;left:40px;top:40px;border:1px solid #A8A8A3;overflow:hidden;border-radius: 80px;}
+.pic_radio img{width:100%;animation:mymove 20s linear infinite;}
+@keyframes  mymove{ 0% {transform:rotate(0deg);} 100%{transform:rotate(360deg);} }
+.operator-btn{position:fixed;bottom:0;width:100%;height:60px;background:rgba(0,0,0,.3)}
+.operator-btn li{width:33.3%;height:60px;float:left;}
+.operator-btn span{width:40px;height:40px;border-radius:22px;display:block;margin:10px auto;}
+.operator-btn .last{position:relative;}
+.operator-btn .last:before{content:"";display:block;width:0;height:0;position:absolute;left:12px;top:10px;border-top:10px solid transparent;border-left:10px solid transparent;border-bottom:10px solid transparent;border-right:16px solid rgba(255,255,255,.8);}
+.operator-btn .last:after{content:"";width:2px;height:20px;background:rgba(255,255,255,.8);position:absolute;left:16px;top:10px;}
+.operator-btn .start{border:1px solid rgba(255,255,255,.3);background:rgba(255,255,255,.1);position: relative;}
+.operator-btn .play:before{content:"";display:block;width:0;height:0;position:absolute;left:12px;top:10px;border-top:10px solid transparent;border-right:10px solid transparent;border-bottom:10px solid transparent;border-left:20px solid rgba(255,255,255,.8);}
+.operator-btn .pause:before,.operator-btn .pause:after {content:"";display:block;width:4px;height:20px;background:rgba(255,255,255,.8);position:absolute;top:10px;}
+.operator-btn .pause:before{left:12px;}
+.operator-btn .pause:after{right:12px;}
+.operator-btn .next{position: relative;}
+.operator-btn .next:before{content:"";display:block;width:0;height:0;position:absolute;left:12px;top:10px;border-top:10px solid transparent;border-right:10px solid transparent;border-bottom:10px solid transparent;border-left:16px solid rgba(255,255,255,.8);}
+.operator-btn .next:after{content:"";width:2px;height:20px;background:rgba(255,255,255,.8);position:absolute;right:6px;top:10px;}
