--- a/public/css/music.css
+++ b/public/css/music.css
@@ -1,11 +1,13 @@
 body{background: linear-gradient(#051232, #70525C);}
+.hide{display:none;}
 .music_box{color:#fff;text-align:center;padding-top:20px;}
 .music_box .title{font-size:16px;font-weight:300;}
 .disc{width:200px;height:200px;margin:20px auto;background:url("/images/cp.png") no-repeat center;background-size:200px;position:relative;}
 .disc:before{content:"";width:20px;height:20px;border-radius:12px;border:2px solid #A8A8A3;background:#DDD4CC;position:absolute;left:90px;top:90px;z-index:1;}
 .pic_radio{width:120px;height:120px;position:relative;left:40px;top:40px;border:1px solid #A8A8A3;overflow:hidden;border-radius: 80px;}
-.pic_radio img{width:100%;animation:mymove 20s linear infinite;}
-@keyframes  mymove{ 0% {transform:rotate(0deg);} 100%{transform:rotate(360deg);} }
+.pic_radio img{width:100%;animation:rotate 30s linear infinite;}
+@keyframes rotate{ 0% {transform:rotate(0deg);} 100%{transform:rotate(360deg);} }
+.pic_radio.paused img{animation-play-state:paused;}
 .operator-btn{position:fixed;bottom:0;width:100%;height:60px;background:rgba(0,0,0,.3)}
 .operator-btn li{width:33.3%;height:60px;float:left;}
 .operator-btn span{width:40px;height:40px;border-radius:22px;display:block;margin:10px auto;}
