--- a/public/css/music.css
+++ b/public/css/music.css
@@ -8,6 +8,9 @@ body{background: linear-gradient(#051232, #70525C);}
 .pic_radio img{width:100%;animation:rotate 30s linear infinite;}
 @keyframes rotate{ 0% {transform:rotate(0deg);} 100%{transform:rotate(360deg);} }
 .pic_radio.paused img{animation-play-state:paused;}
+.time_progress{width:100%;position:fixed;bottom:60px;}
+.time_progress .time{width:100%;text-align:center;}
+.time_progress .progress{width:0;height:1px;background:rgba(255,255,255,.6);}
 .operator-btn{position:fixed;bottom:0;width:100%;height:60px;background:rgba(0,0,0,.3)}
 .operator-btn li{width:33.3%;height:60px;float:left;}
 .operator-btn span{width:40px;height:40px;border-radius:22px;display:block;margin:10px auto;}
