音乐播放页面

--- a/views/music/music.html
+++ b/views/music/music.html
@@ -17,7 +17,7 @@
             <img src="{{ data.songinfo.pic_big }}"/>
         </div>
     </div>
-    <div class="lrc-box">
+    <div id="lrc" class="lrc-box">
 
     </div>
     <div class="time_progress">
