--- a/views/blogViews/baseBlog.html
+++ b/views/blogViews/baseBlog.html
@@ -20,11 +20,11 @@
 <nav class="top">
     <ul>
         <li><a href="/">主页</a></li>
-        <li><a {% if data.index == 4 %} class="cur" {% endif %} href="/about">关于我</a></li>
-        <li><a {% if data.index == 3 %} class="cur" {% endif %} href="/lway">长路漫漫</a></li>
-        <li><a {% if data.index == 2 %} class="cur" {% endif %} href="/life">慢生活</a></li>
-        <li><a {% if data.index == 1 %} class="cur" {% endif %} href="/recollect">记·忆</a></li>
-        <li><a {% if data.index == 0 %} class="cur" {% endif %} href="/mood">碎言碎语</a></li>
+        <li><a {% if data.index == 4 %} class="cur" {% endif %} href="/blog/about">关于我</a></li>
+        <li><a {% if data.index == 3 %} class="cur" {% endif %} href="/blog/way">长路漫漫</a></li>
+        <li><a {% if data.index == 2 %} class="cur" {% endif %} href="/blog/life">慢生活</a></li>
+        <li><a {% if data.index == 1 %} class="cur" {% endif %} href="/blog/recollect">记·忆</a></li>
+        <li><a {% if data.index == 0 %} class="cur" {% endif %} href="/blog/mood">碎言碎语</a></li>
     </ul>
 </nav>
 <div class="clearFix"></div>
@@ -49,7 +49,7 @@
     {% endblock %}
 </div>
 {% block talk %}
-<div class="IwantToSayToYou dis">
+<div class="IwantToSayYou dis">
     <h3>我想对你说</h3>
     <p><em>陈蜜</em>，最近过的还<em>好</em>吗？好久没有你的消息，还是挺<em>想你</em>的。</p>
     <p>网站还没有做手机版的适配，所以请使用电脑访问博客主页吧！</p>
