--- a/views/talk.html
+++ b/views/talk.html
@@ -8,8 +8,8 @@
     <audio id="audio" src="/play/speech?talk={{data.talk}}" autoplay></audio>
 </div>
 <div>
-    <input id="talk"/>
-    <button id="sub">提交</button>
+    <br/><dr/>
+    <button id="start" style="user-select:none;margin-top:100px;padding:20px;">录音</button>
 </div>
 <script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
 <script src="/js/talk.js"></script>
