--- a/views/blogViews/baseBlog.html
+++ b/views/blogViews/baseBlog.html
@@ -50,14 +50,49 @@
 </div>
 {% block talk %}
 <div class="IwantToSayYou dis">
-    <h3>我想对你说</h3>
-    <p><em>陈蜜</em>，最近过的还<em>好</em>吗？好久没有你的消息，还是挺<em>想你</em>的。</p>
-    <p>网站还没有做手机版的适配，所以请使用电脑访问博客主页吧！</p>
-    <p>如果以后还有机会，再做个手机版适配。</p>
-    <p>一直以来，都没有给你太多的帮助，不过你还是靠自己的努力总算也学会了很多东西，我希望这个网站可以给你带来更多的帮助，也希望你能好好体会整个网站的开发过程，然后自己照着写一遍。当然，如果你<em>遇见</em>问题了，<em>你</em>还可以来问<em>我</em>，如果你还能原谅我的话，我会<em>很高兴</em>的。</p>
-    <p>这么久了，都没你的消息，好怀念曾经的我们，可以那样一直关心着你，和你说说话，现在都已经没有勇气去面对你，感觉自己好多的无助，明明那么喜欢你，却不敢和你联系。我知道，我有很多的不好，每次和你打电话和视频我都不知道和你说什么，总是支支吾吾，你一定很不开心吧，但真的好希望我们还能回到最初。这段时间里，每天都会想起你，想起你那开心的样子。</p>
-    <p>还记得我们以前说的那些吗？我一直都记得，你说以后带你出去玩要给你拍好多好多照片，我说要带你去海边看日出，做好多好多好吃的给你吃；我还说以后会去找你的，你说要我记得我说的，要去找你。还有好多好多，如果你还能原谅我的话，我会一个个去实现的。我会为了你改变自己所有不好的，把最好的都留给你。</p>
-    <p>说了这么多，不管以后怎样，我都希望你能过的开心。现在最希望的就是你能顺利找到实习，然后好好工作，工作上遇到问题了或者生活上有什么难处，记得还有我，一定要告诉我，我都会尽量帮你的，不要觉得不好意思对我有所亏欠，那都是一个爱你的人所要去做的事情。好好努力吧，为了自己明天更好的生活，加油啊！</p>
+    <h3>诚实的想你</h3>
+
+    <p>世界忽然变形忽然很安静</p>
+    <p>无助的我一秒间失去重心</p>
+    <p>听你不停为我担心</p>
+    <p>看你不停离我而去</p>
+    <p>你要我照顾自己</p>
+    <p>是我做了什么让天使生气</p>
+    <p>还是忘了做什么让幸福远离</p>
+    <p>也许该要真的相信</p>
+    <p>有种爱叫远远关心</p>
+    <p>痛却又哽住呼吸</p>
+    <p>我用狂奔用无力用恶梦去想你</p>
+    <p>我讨厌命运骄傲的神情</p>
+    <p>嘲笑我没半点权利决定</p>
+    <p>我用痛哭用回忆用深爱去想你</p>
+    <p>去体会什么是迫不得已</p>
+    <p>越懂才越有勇气</p>
+    <p>诚实地想你</p>
+    <p>是我做了什么让天使生气</p>
+    <p>还是忘了做什么让幸福远离</p>
+    <p>也许应该要真的相信</p>
+    <p>是有种爱叫远远关心</p>
+    <p>痛却又哽住呼吸</p>
+    <p>我用狂奔用无力用恶梦去想你</p>
+    <p>我讨厌命运骄傲的神情</p>
+    <p>嘲笑我没半点权利决定</p>
+    <p>我用痛哭用回忆用深爱去想你</p>
+    <p>去体会什么是迫不得已</p>
+    <p>越懂才越有勇气</p>
+    <p>诚实地想你</p>
+    <p>是不是担心我怕黑不敢前进</p>
+    <p>那颗本来没坠落的流星</p>
+    <p>才拼命烧亮了自己</p>
+    <p>我用狂奔用无力用恶梦去想你</p>
+    <p>我讨厌命运骄傲的神情</p>
+    <p>嘲笑我没半点权利决定</p>
+    <p>我用痛哭用回忆用深爱去想你</p>
+    <p>去体会什么是迫不得已</p>
+    <p>越懂才越有勇气</p>
+    <p>诚实地想你</p>
+    </pre>
+
     <div class="foot"><a class="button" href="/boss">进入后台管理系统</a></div>
 </div>
 {% endblock %}
