--- a/views/blogViews/articleBlog.html
+++ b/views/blogViews/articleBlog.html
@@ -6,7 +6,7 @@
 <h2>{{blog.title}}</h2>
 <div class="artMess clear">
     <span>发表时间：<time>{{blog.time|date('Y-m-d', -480)}}</time></span>
-    <span>编辑：陈蜜</span>
+    <span>编辑：Maker</span>
 </div>
 {{ data.content|safe }}
 {% endblock %}
