--- a/views/blogViews/modelOne.html
+++ b/views/blogViews/modelOne.html
@@ -3,11 +3,11 @@
 	<p class="cover"><img class="img" width="100%" src="/blogStatic/images/bg.jpg"/></P>
 	<nav class="abs">
 		<ul>
-			<li><a href="/mood">碎言碎语</a></li>
-			<li><a href="/recollect">记忆</a></li>
-			<li><a href="/life">慢生活</a></li>
-			<li><a href="/lway">长路漫漫</a></li>
-			<li><a href="/about">关于我</a></li>
+			<li><a href="/blog/mood">碎言碎语</a></li>
+			<li><a href="/blog/recollect">记忆</a></li>
+			<li><a href="/blog/life">慢生活</a></li>
+			<li><a href="/blog/way">长路漫漫</a></li>
+			<li><a href="/blog/about">关于我</a></li>
 		</ul>
 	</nav>
 	<div class="magic abs">
