--- a/views/blog/modelOne.html
+++ b/views/blog/modelOne.html
@@ -1,13 +1,13 @@
 
 <div class="modelOne rel">
-	<p class="cover"><img class="img" width="100%" src="/blogStatic/images/bg.jpg"/></P>
+	<p class="cover"><img class="img" width="100%" src="/blogStatic/images/bg.jpg"/></p>
 	<nav class="abs">
 		<ul>
 			<li><a href="/blog/mood">碎言碎语</a></li>
 			<li><a href="/blog/recollect">记忆</a></li>
 			<li><a href="/blog/life">慢生活</a></li>
 			<li><a href="/blog/way">长路漫漫</a></li>
-			<li><a href="/blog/about">关于我</a></li>
+			<li><a href="/blog/personal">个人中心</a></li>
 		</ul>
 	</nav>
 	<div class="magic abs">
