--- a/views/wechat/base.html
+++ b/views/wechat/base.html
@@ -8,10 +8,10 @@
     <meta name="x5-orientation" content="portrait">
     <meta name="MobileOptimized" content="320">
     <meta name="format-detection" content="telephone=no">
-    <link type="text/css" rel="stylesheet" href="/css/base.css"/>
+    <link type="text/css" rel="stylesheet" href="/wechatStatic/css/base.css"/>
     {% block css %} {% endblock %}
-    <script type="text/javascript" src="/js/common/jquery-1.12.4.min.js"></script>
-    <script type="text/javascript" src="/js/common/effects-mk.js"></script>
+    <script type="text/javascript" src="/wechatStatic/js/common/jquery-1.12.4.min.js"></script>
+    <script type="text/javascript" src="/wechatStatic/js/common/effects-mk.js"></script>
 </head>
 <body>
 {% block body %}
