--- a/views/wechat/common/cat-loading.html
+++ b/views/wechat/common/cat-loading.html
@@ -1,4 +1,4 @@
-<link type="text/css" rel="stylesheet" href="/css/common/cat-loading.css"/>
+<link type="text/css" rel="stylesheet" href="/wechatStatic/css/common/cat-loading.css"/>
 <div class="mao_box">
     <div class="mao">
         <div class="mao_head">
