--- a/views/wechat/index.html
+++ b/views/wechat/index.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 {% block title %}Mk首页{% endblock %}
 {% block css %}
-<link type="text/css" rel="stylesheet" href="/css/index.css"/>
+<link type="text/css" rel="stylesheet" href="/wechatStatic/css/index.css"/>
 {% endblock %}
 {% block body %}
     <div>
-        <h1>网站正在努力开发中。。。</h1>
+        <h1>网站正在维护中。。。</h1>
     </div>
 
     <div class="footer">
