--- a/views/wechat/invitation.html
+++ b/views/wechat/invitation.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %} {% block title %}{{ title }}{% endblock %} {% block css %}
-<link type="text/css" rel="stylesheet" href="/css/common/animate.min.css" />
-<link type="text/css" rel="stylesheet" href="/css/FSVS.css" />
-<link type="text/css" rel="stylesheet" href="/css/invitation.css" /> {% endblock %} {% block body %}
+<link type="text/css" rel="stylesheet" href="/wechatStatic/css/common/animate.min.css" />
+<link type="text/css" rel="stylesheet" href="/wechatStatic/css/FSVS.css" />
+<link type="text/css" rel="stylesheet" href="/wechatStatic/css/invitation.css" /> {% endblock %} {% block body %}
 <div id="fsvs-body">
     <div class="slide">
         <div class="animated" data-animate="zoomInDown">
-            <img class="dis imgInv" src="/images/inv-bg.png" width="100%" />
+            <img class="dis imgInv" src="/wechatStatic/images/inv-bg.png" width="100%" />
             <div class="dis describe" id="write">
                 <p style="color:#fff">在这有着重大意义的一年</p>
                 <p style="color:#D66AB4">让我们一起放手一搏</p>
@@ -24,7 +24,7 @@
             <h3>我要说的</h3>
             <div class="sayContent" style="text-align:left;">
                 <p>Hi~大家好，我是Maker。感谢你能打开这封邀请函。创业？是的，一直想要创业，但迟迟未能行动，这次真的要大干一场。那创业项目是什么呢，哈哈，当然是智能家居啦~</p>
-                <p>what? 智能家居什么鬼？？我做了个关于智能家居的短视频 ☞<a style="display:inline;color:#9ee172" href="/invitation/smart"> 戳我观看 </a>☜</p>
+                <p>what? 智能家居什么鬼？？我做了个关于智能家居的短视频 ☞<a style="display:inline;color:#9ee172" href="/wechat/invitation/smart"> 戳我观看 </a>☜</p>
                 <p>现在市场上的“智能”产品，都是使用手机控制。在我的脑海里，智能产品是能根据外在环境<strong>自主控制</strong>来达到预期的效果。所以我想做的是利用<strong>人工智能</strong>结合<strong>物联网</strong>打造一个产品智能交互平台,具体实施方案尚未拟订，特此发出邀请，希望有志之士共同商酌。</p>
             </div>
             <div class="declare">
@@ -78,6 +78,6 @@
     </div>
 </div>
 
-<script src="/js/common/FSVS.js"></script>
-<script src="/js/invitation.js"></script>
+<script src="/wechatStatic/js/common/FSVS.js"></script>
+<script src="/wechatStatic/js/invitation.js"></script>
 {% endblock %}
