--- a/views/wechat/music/music.html
+++ b/views/wechat/music/music.html
@@ -1,7 +1,7 @@
 {% extends '../base.html' %}
 {% block title %}音乐{% endblock %}
 {% block css %}
-<link type="text/css" rel="stylesheet" href="/css/music.css"/>
+<link type="text/css" rel="stylesheet" href="/wechatStatic/css/music.css"/>
 {% endblock %}
 {% block body %}
 <input id="songid" type="hidden" value="{{ data.songinfo.song_id }}"/>
@@ -34,5 +34,5 @@
     </div>
 </div>
 
-<script src="/js/music.js"></script>
+<script src="/wechatStatic/js/music.js"></script>
 {% endblock %}
