--- a/views/wechat/smartHome.html
+++ b/views/wechat/smartHome.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 {% block title %}未来的生活方式{% endblock %}
 {% block css %}
-<link type="text/css" rel="stylesheet" href="/css/smartHome.css"/>
+<link type="text/css" rel="stylesheet" href="/wechatStatic/css/smartHome.css"/>
 {% endblock %}
 
 {% block body %}
 <div class="smart">
-    <iframe width="100%" src='http://player.youku.com/embed/XMzM3NDQyNDQ4MA==' frameborder=0 'allowfullscreen'></iframe>
+    <iframe width="100%" src='http://player.youku.com/embed/XMzM3NDQyNDQ4MA==' frameborder=0 allowfullscreen></iframe>
 
     <p>这是我从网上找来的一段视频</p>
     <p>介绍了未来人们的生活方式</p>
@@ -17,6 +17,6 @@
     <p>点击下方的按钮返回邀请函报名吧</p>
     <p>↓↓↓</p>
     <br/>
-    <a href="/invitation#slide-2">返回邀请函</a>
+    <a href="/wechat/invitation#slide-2">返回邀请函</a>
 </div>
 {% endblock %}
