--- a/views/wechat/talk.html
+++ b/views/wechat/talk.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}{{ title }}{% endblock %}
 {% block css %}
-<link type="text/css" rel="stylesheet" href="/css/talk.css"/>
+<link type="text/css" rel="stylesheet" href="/wechatStatic/css/talk.css"/>
 {% endblock %}
 {% block body %}
 <div>
@@ -12,5 +12,5 @@
     <button id="start" style="user-select:none;margin-top:100px;padding:20px;">录音</button>
 </div>
 <script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
-<script src="/js/talk.js"></script>
+<script src="/wechatStatic/js/talk.js"></script>
 {% endblock %}
