--- a/views/wechat/uploadSuccess.html
+++ b/views/wechat/uploadSuccess.html
@@ -11,6 +11,6 @@
 <div class="content">
     <h1>{{ result }}上传成功！</h1>
 
-    <p><a href="/upload">返回上传页</a></p>
+    <p><a href="/wechat/upload">返回上传页</a></p>
 </div>
 {% endblock %}
