--- a/views/blog/baseBlog.html
+++ b/views/blog/baseBlog.html
@@ -19,8 +19,8 @@
 {% block nav %}
 <nav class="top">
     <ul>
-        <li><a href="/">主页</a></li>
-        <li><a {% if data.index == 4 %} class="cur" {% endif %} href="/blog/about">关于我</a></li>
+        <li><a href="/blog">主页</a></li>
+        <li><a {% if data.index == 4 %} class="cur" {% endif %} href="/blog/personal">个人中心</a></li>
         <li><a {% if data.index == 3 %} class="cur" {% endif %} href="/blog/way">长路漫漫</a></li>
         <li><a {% if data.index == 2 %} class="cur" {% endif %} href="/blog/life">慢生活</a></li>
         <li><a {% if data.index == 1 %} class="cur" {% endif %} href="/blog/recollect">记·忆</a></li>
