--- a/views/wechat/tools.html
+++ b/views/wechat/tools.html
@@ -10,7 +10,7 @@
 <div class="tools">
     <h1>工具</h1><br/>
     <ol>
-        <li><a href="/talk">语音聊天</a></li>
+        <li><a href="/wechat/talk">语音聊天</a></li>
     </ol>
 </div>
 {% endblock %}
