--- a/views/wechat/wxy.html
+++ b/views/wechat/wxy.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}Mk首页{% endblock %}
 {% block css %}
-<link type="text/css" rel="stylesheet" href="/css/wxy.css"/>
+<link type="text/css" rel="stylesheet" href="/wechatStatic/css/wxy.css"/>
 {% endblock %}
 {% block body %}
 <div>
