--- a/views/wechat/base.html
+++ b/views/wechat/base.html
@@ -14,6 +14,23 @@
     <script type="text/javascript" src="/wechatStatic/js/common/effects-mk.js"></script>
 </head>
 <body>
+<input id="device" type="hidden" value="pc"/>
+<script>
+    function is_weixin() {
+        const ua = navigator.userAgent.toLowerCase();
+        if(ua.match(/MicroMessenger/i) == "micromessenger"){
+            return true;
+        } else {
+            return false;
+        }
+    }
+    const isWeixin = is_weixin();
+    if (isWeixin) {
+        $("#device").val("wx");
+    }else{
+
+    }
+</script>
 {% block body %}
 
 {% endblock %}
