simditor编辑器  代码优化

--- a/views/plugin/simditor.html
+++ b/views/plugin/simditor.html
@@ -19,7 +19,7 @@
     <input id="messType" type="hidden" value="article"/>
     <div class="simditor-editor-float">
         <div class="simditor-textarea fn-clearfix" style="border-color:{{bgColor}}">
-            <h1 class="title"><input type="text" placeholder="请输入标题" name="title"/></h1>
+            <h1 class="title"><input type="text" placeholder="请输入标题" name="title" maxlength="100"/></h1>
             <textarea id="editor" placeholder="请输入文章内容" autofocus></textarea>
             <button id="submit" class="simditor-submit" style="background:{{bgColor}}">{{btnName}}</button>
         </div>
