获取cookie的方法 公共js抽出

--- a/views/blog/baseBlog.html
+++ b/views/blog/baseBlog.html
@@ -100,7 +100,7 @@
     本网站由 <a href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=lccm722@yahoo.com" target="_bank">lccm722@yahoo.com</a> 提供技术支持
 </div>
 </body>
-<script type="text/javascript" src="/blogStatic/js/jquery-1.12.4.min.js"></script>
-<script type="text/javascript" src="/blogStatic/js/common.js"></script>
+<script type="text/javascript" src="/commonStatic/js/jquery-1.12.4.min.js"></script>
+<script type="text/javascript" src="/commonStatic/js/common.js"></script>
 {% block script %}{% endblock %}
 </html>
