1、扫码登录2、工具页面优化

--- a/views/wechat/auth.html
+++ b/views/wechat/auth.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}用户认证{% endblock %}
+{% block title %}身份认证{% endblock %}
 {% block css %}
 <style>
     .auth{text-align:center;}
@@ -7,7 +7,7 @@
 {% endblock %}
 {% block body %}
 <div class="auth">
-    <h1>公众号用户认证</h1>
+
     <input id="authKey" placeholder="输入认证密钥" />
     <button id="submit">认 证</button>
 </div>
