--- a/views/wechat/tools.html
+++ b/views/wechat/tools.html
@@ -2,20 +2,25 @@
 {% block title %}常用工具{% endblock %}
 {% block css %}
 <style>
-.tools li{float:left;border:1px solid #ccc;margin:10px;}
-.tools li a{color:#333;padding:20px;display:block;}
+    body{background:#fff;}
+    .tools li{width:80px;height:80px;float:left;margin:20px;border-radius:10px;box-shadow: 0 0 4px rgba(0,0,0,.6)}
+    .tools li a{color:#333;display:block;width:100%;height:100%;text-align:center;line-height:200px;}
+    .qrcode{background:url("/wechatStatic/images/qrcode_ico.jpg") no-repeat center;background-size: 80px;}
+    .talk{background:url("/wechatStatic/images/girl.png") no-repeat center;background-size: 120px;}
 </style>
 {% endblock %}
 {% block body %}
 <div class="tools">
-    <h1>工具</h1><br/>
     <ol>
-        <li><a href="/wechat/talk">语音聊天</a></li>
-        <li id="qrcode"><a>扫一扫</a></li>
+        <li class="qrcode"><a id="qrcode">扫码</a></li>
+        <li class="talk"><a href="/wechat/talk">语音对话</a></li>
     </ol>
 </div>
 
-<script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
+<script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
+<script type="text/javascript" src="/commonStatic/js/common.js"></script>
+<script type="text/javascript" src="/socket.io/socket.io.js"></script>
+<script type="text/javascript" src="/wechatStatic/js/handle.qrcode.js"></script>
 <script>
     $.ajax({
         url: '/ajax/wxConfig',
@@ -61,9 +66,9 @@
             needResult: 1, // 默认为0，扫描结果由微信处理，1则直接返回扫描结果，
             scanType: ["qrCode","barCode"], // 可以指定扫二维码还是一维码，默认二者都有
             success: function (res) {
-                var result = res.resultStr; // 当needResult 为 1 时，扫码返回的结果
-                alert(res);
-                document.write(JSON.stringify(res));
+                const result = res.resultStr; // 当needResult 为 1 时，扫码返回的结果
+                const data = result.split("==");
+                handleQRcode(data);
             }
         });
     });
