1、utils的文件重命名 2、登录功能作修改 3、调用api的方法作代码优化

--- a/views/blog/modelTwo.html
+++ b/views/blog/modelTwo.html
@@ -11,7 +11,7 @@
 			<p class="cat cat2 abs"><img src="/blogStatic/images/cat/tiantiansifangmao-14.png"></p>
 			<p class="cat cat3 abs"><img src="/blogStatic/images/cat/tiantiansifangmao-15.png"></p>
 			<div class="personal abs">
-				<a class="portrait rel" href="/about"><img src="/blogStatic/images/portrait/myhead.png"><span class="name abs">{{data.name}}</span></a>
+				<a class="portrait rel" href="/blog/personal"><img src="/blogStatic/images/portrait/myhead.png"><span class="name abs">{{data.name}}</span></a>
 			</div>
 			
 			<ul class="abs">
